version 2.3.3 - updated header size on mobile - fixed white bars on background - added margin on project menu

--- a/src/app/landingpage/header/header.component.css
+++ b/src/app/landingpage/header/header.component.css
@@ -4,7 +4,7 @@ section.header.title-header{
 
 div .title-header-heading{
     font-family: 'VT323', 'Courier New', 'Courier', serif;
-    font-size: 5em;
+    font-size: 6vw;
 }
 
 div .title-header-subheading{
