--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -88,3 +88,7 @@ h2 a {
   text-decoration: none !important;
   color: #EE7456;
 }
+
+.project-menu {
+    margin-top: 5%;
+}
